kubernetes/apps/redis/insight/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisinsight-ingress
  labels:
    name: redisinsight-ingress
spec:
  rules:
    - host: redisinsight.home.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: redisinsight-service
                port:
                  number: 80
